--- a/NEWS
+++ b/NEWS
@@ -5,4 +5,6 @@ NEW FEATURES:
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==> 
+001 ==> 280058 - No coordinates shown in GPSSync window when using sidecar files.
+002 ==> 
+ 
