--- a/README
+++ b/README
@@ -140,6 +140,12 @@ http://bugs.kde.org/buglist.cgi?product=kipiplugins&bug_status=UNCONFIRMED&bug_s
 
 -- INSTALL ------------------------------------------------------------
 
+CMake compilation options to custom digiKam:
+
+Use CMake "-DENABLE_OPENCV3=on"           flag to compile kipi-plugins source code using OpenCV3 instead OpenCV2                     (disabled by default).
+                                          OpenCV3 support needs extra contrib modules package, especially 'face'
+                                          and 'legacy' components.
+
 In order to compile, especially when QT3/Qt4 are installed at the same time, 
 just use something like that:
 
