NEWS file update.

--- a/NEWS
+++ b/NEWS
@@ -8,5 +8,5 @@ General : Add support of OpenCV 3.x
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
 001 ==> 306442 - Digikam 2.8 crash when opening geolocation plugin.
-002 ==> 
+002 ==> 352596 - Unable to upload large image to flickr even though I'm resizing it.
  
