--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ General : PiwigoExport plugin renamed as Piwigo.
 General : GPSSync plugin renamed as Geolocator.
 General : DNGConverter moved to digiKam core.
 General : AcquireImages moved to digiKam core.
+General : MetadataEdit moved to digiKam core.
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
