--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ General : Add support of OpenCV 3.x
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
-001 ==> 306442 - Digikam 2.8 crash when opening geolocation plugin.
+001 ==> 306442 - digiKam 2.8 crash when opening geolocation plugin.
 002 ==> 352596 - Unable to upload large image to flickr even though I'm resizing it.
- 
+003 ==> 352621 - Export to facebook crashes.
+004 ==> 
