--- a/NEWS
+++ b/NEWS
@@ -51,5 +51,5 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 033 ==> 211524 - Raw batch converter kipi can't get rid of scroll bar.
 034 ==> 215037 - Batch RAW converter crashed after open with NEF file.
 035 ==> 246437 - digiKam crashes when loading a raw file.
-036 ==> 
-
+036 ==> 342687 - Panorama file time-stamps should be the same than the stitched pictures [patch].
+037 ==> 
