--- a/README
+++ b/README
@@ -46,7 +46,9 @@ Enblend         >= 3.0.0 (runtime dependency)   http://enblend.sourceforge.net
 
 Optional:
 
-libphonon       >= 4.81.0                       https://projects.kde.org/projects/kdesupport/phonon
+libthreadweaver >= 5.0.0                        https://projects.kde.org/projects/frameworks/threadweaver                    
+libkarchive     >= 5.0.0                        https://projects.kde.org/projects/frameworks/karchive
+libphonon       >= 5.0.0                        https://projects.kde.org/projects/kdesupport/phonon
 libkcalcore     >= 5.0.0                        https://projects.kde.org/projects/kde/pim/kcalcore
 libmediawiki    >= 5.0.0                        https://projects.kde.org/projects/extragear/libs/libmediawiki
 libkvkontakte   >= 4.70.0                       https://projects.kde.org/projects/extragear/libs/libkvkontakte
@@ -54,11 +56,7 @@ libxslt         >= 1.1.0                        http://xmlsoft.org/XSLT
 libxml2         >= 2.7.0                        http://xmlsoft.org
 libX11          >= 1.1.5                        http://www.x11.org
 libqtopengl     >= 4.3.0                        http://www.qtsoftware.com
-Mesa3D          >= 7.0.4                        http://mesa3d.sourceforge.net
-libqca          >= 2.1.0                        http://delta.affinix.com/qca
-libqjson        >= 0.8.1                        http://qjson.sourceforge.net
-libimagemagick  >= 5.5.4                        http://www.imagemagick.org
-libqtgstreamer  >= 0.9.0                        http://gstreamer.freedesktop.org/modules/qt-gstreamer.html
+libmesa         >= 7.0.4                        http://mesa3d.sourceforge.net
 libqtkoauth     >= 0.97                         https://github.com/kypeli/kQOAuth
 flex            >= 2.5.0                        http://flex.sourceforge.net
 bison           >= 2.5.0                        http://www.gnu.org/software/bison/bison.html
