--- a/README
+++ b/README
@@ -38,7 +38,8 @@ Panorama           : A tool to assemble panoramic photo automatically.
 -- DEPENDENCIES -------------------------------------------------------
 
 CMake           >= 3.0.0                        http://www.cmake.org
-libqt           >= 5.5.0                        http://www.qtsoftware.com
+ECM             >= 1.7.0                        https://projects.kde.org/projects/kdesupport/extra-cmake-modules
+libqt           >= 5.4.0                        http://www.qtsoftware.com
 libkde          >= 5.5.0                        http://www.kde.org
 libkipi         >= 5.0.0                        https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi
 Hugin           >= 0.8.0 (runtime dependency)   http://hugin.sourceforge.net
