expoblending tool is now moved in digiKAm core

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ General : DNGConverter moved to digiKam core.
 General : AcquireImages moved to digiKam core.
 General : MetadataEdit moved to digiKam core.
 General : Geolocator moved to digiKam core.
+General : ExpoBlending moved to digiKam core.
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
