Calendar tool is now moved to digiKam core

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ General : AcquireImages moved to digiKam core.
 General : MetadataEdit moved to digiKam core.
 General : Geolocator moved to digiKam core.
 General : ExpoBlending moved to digiKam core.
+General : Calendar moved to digiKam core.
 
 BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 
