drop KIO from Imgur export tool and porting to current API BUGS: 360404 FIXED-IN: 5.0.0

--- a/NEWS
+++ b/NEWS
@@ -61,4 +61,6 @@ BUGFIXES FROM KDE BUGZILLA (http://bugs.kde.org):
 041 ==> 321647 - Kenburns effect from AdvancedSlideshow forgets to auto-rotate photos
 042 ==> 356939 - Advanced slide show: playing sound track does not work.
 043 ==> 361329 - Flickr uploader does not clean /tmp after upload.
-044 ==> 
+044 ==> 360404 - Imgur autorization not work.
+045 ==> 
+
